--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Index of the Urls</h1>
 
 <%= form_for Url.new do |u| %>
-	<%= u.label :url %>
-	<%= u.text_field :url %><br />
+	<%= u.label :address %>
+	<%= u.text_field :address %><br />
 	<%= u.label :user %>
 	<%= u.text_field :user %><br />
 	<%= u.submit %>
@@ -11,6 +11,6 @@
 <ul></ul>
 	<% for url in @urls %>
 	<li> Name: <%= url.user %>
-	 URL: <%= url.url %></li>
+	 URL: <%= url.address %></li>
 	<% end %>
 </ul>
