removed validation on url model to test out why saving was not happening. Turns out that is the issue and now we have version ALPHA of horsebeer

--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <ul>
-	<% @urls.each |url| %>
+	<% @urls.each do |url| %>
 		<li> Name: <%= url.user %>
 		 URL: <%= url.address %></li>
 	<% end %>
